test: add basic folders for starting testing app